# yi-shaikko

./: CHANGELOG  ENHANCEMENTS.md  README.md  TEST-RESULTS.md  stack.yaml
benchmarks/: huge-file-test.hs
example-configs/: yi-async-syntax-example.hs
examples/: mode-acme.hs  mode-cua.hs  runtime-keymap.hs
test/: README.md  Spec.hs
test/Integration/: HighlightSpec.hs  RuntimeSpec.hs
test/KeymapTests/: AcmeSpec.hs  CuaSpec.hs  EeSpec.hs  JoeSpec.hs  MgSpec.hs
test/Properties/: EditingProps.hs  KeymapProperties.hs  SwitchingProps.hs
yi-core/: yi-core.cabal
yi-core/src/Yi/: Optimize.hs  Types.hs
yi-core/src/Yi/Buffer/: Misc.hs
yi-core/src/Yi/Keymap/: Registry.hs  Runtime.hs
yi-core/src/Yi/Syntax/: Async.hs  AsyncBuffer.hs
yi-keymap-acme/: yi-keymap-acme.cabal
yi-keymap-acme/src/Yi/Config/Default/: Acme.hs
yi-keymap-acme/src/Yi/Keymap/: Acme.hs
yi-keymap-cua/src/Yi/Keymap/: Cua.hs
yi-keymap-ee/: yi-keymap-ee.cabal
yi-keymap-ee/src/Yi/Keymap/: Ee.hs
yi-keymap-joe/: yi-keymap-joe.cabal
yi-keymap-joe/src/Yi/Keymap/: Joe.hs
yi-keymap-mg/: yi-keymap-mg.cabal
yi-keymap-mg/src/Yi/Config/Default/: Mg.hs
yi-keymap-mg/src/Yi/Keymap/: Mg.hs
yi-runtime-controls/: controls.hs
yi-syntax-async/: highlighter-advanced.hs  highlighter-core.hs  highlighter-external.hs  highlighter-grammar.hs
yi-syntax-async/benchmarks/: async-bench.hs
yi-tests/: LICENSE  yi-tests.cabal
yi-ui-adapter/: ui-adapter.hs
