name:           yi-keymap-joe
version:        0.19.4
synopsis:       Joe editor keymap for Yi
description:    This module provides a Joe's Own Editor (JOE) style keymap for Yi.
                Implements WordStar-compatible key bindings with Ctrl+K sequences.
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

library
  hs-source-dirs:
      src
  ghc-options: -Wall -ferror-spans
  build-depends:
      base >= 4.8 && < 5
    , microlens-platform
    , text >= 1.1.1.3
    , yi-core >= 0.19
    , yi-rope >= 0.10
    , containers
    , mtl
    , transformers
    , filepath
  exposed-modules:
      Yi.Keymap.Joe
      Yi.Config.Default.Joe
  default-language: Haskell2010