name:           yi-keymap-mg
version:        0.19.4
synopsis:       Mg (Micro GNU Emacs) keymap for Yi
description:    This module provides a Mg (Micro GNU Emacs) style keymap for Yi.
                A minimal Emacs subset focused on essential editing commands.
                Production-ready: Yes
                Stability: Stable
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

library
  hs-source-dirs:
      src
  ghc-options: -Wall -ferror-spans
  build-depends:
      base >= 4.8 && < 5
    , microlens-platform
    , text >= 1.1.1.3
    , yi-core >= 0.19
    , yi-rope >= 0.10
    , containers
    , mtl
    , transformers
    , filepath
  exposed-modules:
      Yi.Keymap.Mg
      Yi.Config.Default.Mg
  default-language: Haskell2010